Fixed black triangle alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 .custom-shape-divider-bottom-1636180054 svg {
   position: relative;
   display: block;
-  width: calc(100% + 1.3px);
+  width: calc(100%);
   height: 133px;
 }
 
